- Initial implementation of the system users   * List system users   * Add system users

--- a/root/static/mustache/login.mustache
+++ b/root/static/mustache/login.mustache
@@ -3,16 +3,14 @@
   <p class="light">
   <form action="#" method="post" id="login-form">
     <div class="email">
-      <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
       <input type="text" name="email" class="user" placeholder="Username (Email)"/>
     </div>
 
     <div class="pw">
-      <span class="glyphicon glyphicon-lock" aria-hidden="true"></span>
       <input type="password" name="password" class="pw" placeholder="Password"/>
     </div>
 
-    <input type="submit" value="Login | Register"/>
+    <input type="submit" value="Login"/>
   </form>
   </p>
 </div>
