--- a/root/static/mustache/menu.mustache
+++ b/root/static/mustache/menu.mustache
@@ -1,7 +1,17 @@
 <div class="icon-block">
-  <h2 class="center brown-text"><i class="material-icons">Menu</i></h2>
+  <h4 class="center brown-text"><i class="material-icons">Menu</i></h4>
   <p class="light">
-    <a href="#mode=home" class="pying-menu-item pying-logout">
+    <a href="#mode=system_user" class="pluton-menu-item pluton-system_user">
+      System Users
+    </a>
+  </p>
+  <p class="light">
+    <a href="#mode=system_user;method=add" class="pluton-menu-item pluton-system_user-add">
+      Add System User
+    </a>
+  </p>
+  <p class="light">
+    <a href="#mode=home" class="pluton-menu-item pluton-logout">
       Logout
     </a>
   </p>
