--- a/root/index.tmpl
+++ b/root/index.tmpl
@@ -14,7 +14,7 @@
   <div id="index-banner" class="parallax-container">
     <div class="section no-pad-bot">
       <div class="container">
-        <h1 class="header center teal-text text-lighten-2">Pluton</h1>
+        <h1 class="header center teal-text text-lighten-2"><a href="/">Pluton</a></h1>
       </div>
     </div>
   </div>
