- Cleanup - Implement Schedules - Initial Backup code

--- a/root/static/mustache/menu.mustache
+++ b/root/static/mustache/menu.mustache
@@ -6,8 +6,13 @@
     </a>
   </p>
   <p class="light">
-    <a href="#mode=system_user;method=add" class="pluton-menu-item pluton-system_user-add">
-      Add System User
+    <a href="#mode=schedule" class="pluton-menu-item pluton-schedule">
+      Schedules
+    </a>
+  </p>
+  <p class="light">
+    <a href="#mode=backup" class="pluton-menu-item pluton-backup">
+      Backups
     </a>
   </p>
   <p class="light">
