--- a/root/static/mustache/login.mustache
+++ b/root/static/mustache/login.mustache
@@ -10,7 +10,7 @@
       <input type="password" name="password" class="pw" placeholder="Password"/>
     </div>
 
-    <input type="submit" value="Login"/>
+    <input type="submit" value="Login" class="btn"/>
   </form>
   </p>
 </div>
