- Fix Backup add and edit forms - Optimize JS code

--- a/root/static/mustache/backup.mustache
+++ b/root/static/mustache/backup.mustache
@@ -2,18 +2,11 @@
   <h4 class="center brown-text">Backup{{#backups.method_name}}: {{backups.method_name}}{{/backups.method_name}}</h4>
   <p class="light">
 
-    {{#backups.method.add}}
-    <form action="#" method="post" id="backup-add-form">
-      <div>
-        <input type="text" name="name" placeholder="Name (Max 32, Alphanumeric)"/>
-      </div>
-
-      <input type="submit" value="Add" class="btn"/>
-      <a href="#mode=backup" class="pluton-menu-item pluton-backup btn">
-        Cancel
-      </a>
-    </form>
-    {{/backups.method.add}}
+    <div id="backup-form-container">
+      {{#backups.method.add}}
+          {{> backup-form}}
+      {{/backups.method.add}}
+    </div>
 
     {{^backups.method_name}}
         <p class="light">
@@ -25,7 +18,7 @@
         <hr/>
 
         {{#backups.names}}
-            <a href="#mode=backup;method=edit;id={{id}}" class="btn">{{name}}</a>
+            <a href="#mode=backup;method=edit;id={{id}}" class="btn" style="text-transform:none;">{{name}}</a>
         {{/backups.names}}
     {{/backups.method_name}}
   </p>
