--- a/root/static/mustache/system_user.mustache
+++ b/root/static/mustache/system_user.mustache
@@ -25,7 +25,7 @@
 
       <div>
         *Single quotes are not allowed.
-        <textarea name="authinfo2" class="materialize-textarea"></textarea>
+        <textarea name="authinfo2" class="materialize-textarea" style="overflow:auto;"></textarea>
       </div>
 
       <input type="submit" value="Save" class="btn"/>
