--- a/root/static/mustache/schedule-form.mustache
+++ b/root/static/mustache/schedule-form.mustache
@@ -1,7 +1,7 @@
 <form action="#" method="post" id="schedule-form">
   <div>
     <input type="hidden" name="id" value="{{id}}"/>
-    <input type="text" name="name" placeholder="Name (Max 32, Alphanumeric)" value="{{name}}"/>
+    <input type="text" name="name" placeholder="Name (Max 80)" value="{{name}}"/>
   </div>
 
   <p class="light">
