--- a/root/static/mustache/backup-form.mustache
+++ b/root/static/mustache/backup-form.mustache
@@ -30,7 +30,7 @@
 
   <div>
     <label>Folders:</label>
-    <textarea name="folders" class="materialize-textarea" style="overflow:auto;">{{folders}}</textarea>
+    <div id="folders-container"></div>
   </div>
 
   <input type="submit" value="Save" class="btn"/>
