--- a/root/static/mustache/system_user.mustache
+++ b/root/static/mustache/system_user.mustache
@@ -5,11 +5,11 @@
     {{#system_users.method.add}}
     <form action="#" method="post" id="system_user-add-form">
       <div>
-        <input type="text" name="username" placeholder="Username (Max 32, Alphanumeric)"/>
+        <input type="text" name="username" placeholder="Username (Max 32, Alphanumeric)" autocomplete="off"/>
       </div>
 
       <div>
-        <input type="password" name="password" placeholder="Password (Min 1, Max 70)"/>
+        <input type="password" name="password" placeholder="Password (Min 1, Max 70)" autocomplete="off"/>
       </div>
 
       <input type="submit" value="Add" class="btn"/>
