--- a/root/static/mustache/login.mustache
+++ b/root/static/mustache/login.mustache
@@ -1,5 +1,5 @@
 <div class="icon-block">
-  <h2 class="center brown-text">Login Here</h2>
+  <!--<h2 class="center brown-text">Login Here</h2>-->
   <p class="light">
   <form action="#" method="post" id="login-form">
     <div class="email">
