--- a/root/static/mustache/menu.mustache
+++ b/root/static/mustache/menu.mustache
@@ -1,5 +1,5 @@
 <div class="icon-block">
-  <h4 class="center brown-text"><i class="material-icons">Menu</i></h4>
+  <!--<h4 class="center brown-text"><i class="material-icons">Menu</i></h4>-->
   <p class="light">
     <a href="#mode=system_user" class="pluton-menu-item pluton-system_user">
       System Users
@@ -13,6 +13,11 @@
   <p class="light">
     <a href="#mode=backup" class="pluton-menu-item pluton-backup">
       Backups
+    </a>
+  </p>
+  <p class="light">
+    <a href="#mode=restore" class="pluton-menu-item pluton-restore">
+      Restore
     </a>
   </p>
   <p class="light">
