- Fix frontend roles

--- a/root/static/mustache/login.mustache
+++ b/root/static/mustache/login.mustache
@@ -3,7 +3,7 @@
   <p class="light">
   <form action="#" method="post" id="login-form">
     <div class="email">
-      <input type="text" name="email" class="user" placeholder="Username (Email)"/>
+      <input type="text" name="email" class="user" placeholder="Username"/>
     </div>
 
     <div class="pw">
