--- a/root/static/mustache/system_user.mustache
+++ b/root/static/mustache/system_user.mustache
@@ -29,9 +29,11 @@
       </div>
 
       <input type="submit" value="Save" class="btn"/>
-      <a href="#mode=system_user" class="pluton-menu-item pluton-system_user btn">
-        Cancel
-      </a>
+      {{#user.roles.admin}}
+          <a href="#mode=system_user" class="pluton-menu-item pluton-system_user btn">
+            Cancel
+          </a>
+      {{/user.roles.admin}}
       <a href="#" class="pluton-menu-item pluton-system_user btn" id="system_user-s3ql_remount">
         Re-Mount
       </a>
