- Fix mode headers

--- a/root/static/mustache/backup.mustache
+++ b/root/static/mustache/backup.mustache
@@ -1,5 +1,5 @@
 <div class="icon-block" name="backup">
-  <h4 class="center brown-text">Backup{{#backups.method_name}}: {{backups.method_name}}{{/backups.method_name}}</h4>
+  <h4 class="center brown-text">Backups{{#backups.method_name}}: {{backups.method_name}}{{/backups.method_name}}</h4>
   <p class="light">
 
     <div id="backup-form-container">
