--- a/root/static/mustache/schedule.mustache
+++ b/root/static/mustache/schedule.mustache
@@ -1,5 +1,5 @@
 <div class="icon-block" name="schedule">
-  <h4 class="center brown-text">Schedule{{#schedules.method_name}}: {{schedules.method_name}}{{/schedules.method_name}}</h4>
+  <h4 class="center brown-text">Schedules{{#schedules.method_name}}: {{schedules.method_name}}{{/schedules.method_name}}</h4>
   <p class="light">
 
     <div id="schedule-form-container">
