- Complete mount types UI

--- a/root/static/mustache/system_user-configuration-list.mustache
+++ b/root/static/mustache/system_user-configuration-list.mustache
@@ -6,5 +6,5 @@
 <hr/>
 
 {{#system_users.mounts}}
-<a href="#mode=system_user;method=mount-edit;mid={{id}}" class="btn" style="text-transform:none;">{{name}}</a>
+<a href="#mode=system_user;method=mount-edit;mid={{id}};user={{params.user}}" class="btn" style="text-transform:none;">{{name}}</a>
 {{/system_users.mounts}}
