--- a/root/static/mustache/system_user-mount-swift-fields.mustache
+++ b/root/static/mustache/system_user-mount-swift-fields.mustache
@@ -7,13 +7,13 @@ swift://<hostname>[:<port>]/<container>[/<prefix>]
 
   -->
   <input type="hidden" name="storage-url" value="{{storage_url}}"/>
-  <label>Domain:</label>
-  <input type="text" name="domain" placeholder="(Max 32, Alphanumeric)" autocomplete="off" value="{{domain}}"/>
-  <label>Port:</label>
+  <label>Hostname:</label>
+  <input type="text" name="hostname" placeholder="(Max 32, Alphanumeric)" autocomplete="off" value="{{hostname}}"/>
+  <label>Port: (Optional)</label>
   <input type="text" name="port" placeholder="(Max 32, Alphanumeric)" autocomplete="off" value="{{port}}"/>
   <label>Container:</label>
   <input type="text" name="container" placeholder="(Max 32, Alphanumeric)" autocomplete="off" value="{{container}}"/>
-  <label>Prefix:</label>
+  <label>Prefix: (Optional)</label>
   <input type="text" name="prefix" placeholder="(Max 32, Alphanumeric)" autocomplete="off" value="{{prefixl}}"/>
 </div>
 
