--- a/root/static/mustache/system_user-mount-form.mustache
+++ b/root/static/mustache/system_user-mount-form.mustache
@@ -1,5 +1,6 @@
 <form action="#" method="post" id="system_user-mount-form">
   <div>
+    <input type="hidden" name="id" value="{{id}}"/>
     <label>Name:</label>
     <input type="text" name="name" placeholder="(Max 32, Alphanumeric)" autocomplete="off" value="{{name}}"/>
   </div>
@@ -31,8 +32,13 @@
     {{#type.local}}{{> system_user-mount-local-fields}}{{/type.local}}
   </div>
 
-  <input type="submit" value="Add" class="btn"/>
+  <input type="submit" value="{{#id}}Update{{/id}}{{^id}}Add{{/id}}" class="btn"/>
   <a href="#mode=system_user;method=configuration;user={{params.user}}" class="pluton-menu-item pluton-system_user btn">
     Cancel
   </a>
+  {{#id}}
+  <a href="#mode=system_user;method=mount-rm;mid={{id}};user={{params.user}}" class="pluton-menu-item pluton-system_user btn">
+    Delete
+  </a>
+  {{/id}}
 </form>
