--- a/root/static/mustache/system_user-configuration-list.mustache
+++ b/root/static/mustache/system_user-configuration-list.mustache
@@ -1,8 +1,10 @@
 <a href="#mode=system_user;method=mount-add;user={{params.user}}" class="pluton-menu-item pluton-system_user-mount-add btn">
   Add Mount Location
 </a>
+{{#user.roles.admin}}
 <a href="#mode=system_user;method=rm;user={{params.user}}" class="btn" style="text-transform:none;">Delete</a>
 <a href="#mode=system_user" class="btn" style="text-transform:none;">Cancel</a>
+{{/user.roles.admin}}
 
 <hr/>
 
