- Add mkfs - Show command executed

--- a/root/static/mustache/system_user-mount-form.mustache
+++ b/root/static/mustache/system_user-mount-form.mustache
@@ -37,6 +37,9 @@
   <a href="#" id="system_user-mount-generate_authinfo2" class="pluton-menu-item pluton-system_user btn">
     Generate Authinfo2
   </a>
+  <a href="#" id="system_user-mount-generate_mkfs" class="pluton-menu-item pluton-system_user btn">
+    Mkfs
+  </a>
   <a href="#" id="system_user-mount-generate_remount" class="pluton-menu-item pluton-system_user btn">
     Mount
   </a>
