--- a/root/static/mustache/system_user-mount-s3-fields.mustache
+++ b/root/static/mustache/system_user-mount-s3-fields.mustache
@@ -10,7 +10,7 @@
   <input type="hidden" name="storage-url" value="{{storage_url}}"/>
   <label>Region:</label>
   <input type="text" name="region" placeholder="(Max 32, Alphanumeric)" autocomplete="off" value="{{region}}"/>
-  <label>bucket:</label>
+  <label>Bucket:</label>
   <input type="text" name="bucket" placeholder="(Max 32, Alphanumeric)" autocomplete="off" value="{{bucket}}"/>
   <label>Prefix:</label>
   <input type="text" name="prefix" placeholder="(Max 32, Alphanumeric)" autocomplete="off" value="{{prefix}}"/>
