- Refactor mount-rm - Add Un Mount button - Fix b2 mounts - Run umount before mount-rm and mount-edit

--- a/root/static/mustache/system_user-mount-view.mustache
+++ b/root/static/mustache/system_user-mount-view.mustache
@@ -38,10 +38,13 @@
 <a href="#" id="system_user-mount-generate_remount" class="pluton-menu-item pluton-system_user btn">
   Mount
 </a>
+<a href="#" id="system_user-mount-generate_umount" class="pluton-menu-item pluton-system_user btn">
+  Un Mount
+</a>
 <a href="#mode=system_user;method=configuration;user={{params.user}}" class="pluton-menu-item pluton-system_user btn">
   Cancel
 </a>
-<a href="#mode=system_user;method=mount-rm;mid={{id}};user={{params.user}}" class="pluton-menu-item pluton-system_user btn">
+<a href="#" id="system_user-mount-generate_rmmount" class="pluton-menu-item pluton-system_user btn">
   Delete
 </a>
 
