- Fix gs passphrase length - Fix Backup and Restore issue

--- a/root/static/mustache/system_user-mount-gs-fields.mustache
+++ b/root/static/mustache/system_user-mount-gs-fields.mustache
@@ -14,7 +14,7 @@
 
 <div>
   <label>Access Secret:</label>
-  <input type="text" name="backend-password" placeholder="(Max 32, Alphanumeric)" autocomplete="off" value="{{backend_password}}"/>
+  <textarea name="backend-password">{{backend_password}}</textarea>
 </div>
 
 <div>
