--- a/root/static/mustache/system_user-mount-gs-fields_view.mustache
+++ b/root/static/mustache/system_user-mount-gs-fields_view.mustache
@@ -1,15 +1,30 @@
 <tr>
-  <th>Bucket Name:</th><td>{{bucketname}}</td>
-</tr>
-<tr>
-  <th>Prefix:</th><td>{{prefix}}</td>
-</tr>
-<tr>
-  <th>Access Key:</th><td>{{backend_login}}</td>
-</tr>
-<tr>
-  <th>Access Secret:</th><td>{{backend_password}}</td>
-</tr>
-<tr>
-  <th>Filesystem Passphrase:</th><td>{{fs_passphrase}}</td>
+  <td colspan="2">
+
+    <div>
+      <b>Bucket Name:</b>
+      <pre>{{bucketname}}</pre>
+    </div>
+
+    <div>
+      <b>Prefix:</b>
+      <pre>{{prefix}}</pre>
+    </div>
+
+    <div>
+      <b>Access Key:</b>
+      <pre>{{backend_login}}</pre>
+    </div>
+
+    <div>
+      <b>Access Secret:</b>
+      <pre>{{backend_password}}</pre>
+    </div>
+
+    <div>
+      <b>Filesystem Passphrase:</b>
+      <pre>{{fs_passphrase}}</pre>
+    </div>
+
+  </td>
 </tr>
