- Send the command stdout using websockets

--- a/root/index.tmpl
+++ b/root/index.tmpl
@@ -26,17 +26,11 @@
       <!--   Icon Section   -->
       <div class="row">
         <div class="col s12 m3 pluton-left">
-          <!--
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Speeds up development</h5>
-
-            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
-          </div>
-          -->
         </div>
 
         <div class="col s12 m6 pluton-middle">
+          <div class="pluton-middle_content"></div>
+          <pre class="pluton-middle_console"></pre>
         </div>
 
         <div class="col s12 m3 pluton-right">
