- Fix session expiration for WebSocket - Make session expire in 30 minutes - Add a 'Remember me' checkbox in the login form so the session expiration is 1 year - Fix Google mount

--- a/root/static/mustache/login.mustache
+++ b/root/static/mustache/login.mustache
@@ -10,7 +10,13 @@
       <input type="password" name="password" class="pw" placeholder="Password"/>
     </div>
 
-    <input type="submit" value="Login" class="btn"/>
+    <input type="submit" value="Login" class="btn" style="float:right;"/>
+
+    <div class="remember">
+      <input type="checkbox" name="remember" class="remember" id="login-remember" value="1"/>
+      <label for="login-remember">Remember me.</label>
+    </div>
+
   </form>
   </p>
 </div>
