- Add 'Run Now' button in the Backup section - Change the Schedule to have better Cron expressions support

--- a/root/static/mustache/backup-form.mustache
+++ b/root/static/mustache/backup-form.mustache
@@ -41,6 +41,11 @@
   </div>
 
   <input type="submit" value="Save" class="btn"/>
+  {{#id}}
+  <a href="#" class="pluton-menu-item pluton-backup-now btn" id="backup-now">
+    Run Now
+  </a>
+  {{/id}}
   <a href="#mode=backup" class="pluton-menu-item pluton-backup btn">
     Cancel
   </a>
