- Add mount_folder, it will be used to let users select the mount destination

--- a/root/static/css/style.css
+++ b/root/static/css/style.css
@@ -58,7 +58,7 @@ footer.page-footer {
     height: 300px;
 }
 
-#folders-container div {
+#folders-container div,#mount_folders-container div {
     margin-left: 10px;
 }
 
