--- a/root/static/mustache/folder.mustache
+++ b/root/static/mustache/folder.mustache
@@ -1,1 +1,1 @@
-<div><input type="{{type}}" name="folder" value="{{path}}" id="{{id}}"><label for="{{id}}"><a href="#" data-path="{{path}}">{{name}}</a></label><div id="container-{{id}}"></div></div>
+<div><input type="{{type}}" name="{{radio_prefix}}folder" value="{{path}}" id="{{id}}"><label for="{{id}}"><a href="#" data-path="{{path}}">{{name}}</a></label><div id="container-{{id}}"></div></div>
